# cellularautomaton

./: .gitignore  CMakeLists.txt  README.md
include/: CellularAutomaton.hpp
src/: CellularAutomaton.cpp  main.cpp
